Holy Grail Layout basic setup in Bootstrapping AppComponent. Header, navrow, leftpane, main, rightpane, and footer (empty) components created.

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Angular18PureRepo1</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8" />
+    <title>Angular18PureRepo1</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <style>
+      html,
+      body {
+        height: 100%; /*  This is to make sure that the height of both html and body takes the 100% of th height of the viewport  */
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+
 </head>
-<body>
-  <app-root></app-root>
-</body>
+
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
