--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       html,
       body {
         height: 100%; /*  This is to make sure that the height of both html and body takes the 100% of th height of the viewport  */
+        min-height: 100vh;
         margin: 0;
         padding: 0;
       }
