--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
       }
     </style>
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
   <body>
